2008-03-11  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Playlist/AbstractPlaylistSource.cs:
	Removed Equals and GetHashCode override that ignored type differences, and
	caused the playqueue to disappear if you had a smartplaylist of the same
	id.

2008-03-10  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Interaction.cs:
	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Model.cs: Fix
	scrolling to jump to the first selected item only if a selected item is
	not already in view.  If the model count < the visible rows, scroll to the
	top.

2008-03-10  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Collection.Database/TrackListDatabaseModel.cs:
	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/TrackListView.cs:
	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ColumnController.cs:
	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Model.cs:
	Default the sort of the TrackList to sort by Artist.

2008-03-10  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseTrackInfo.cs:
	* src/Core/Banshee.Services/Banshee.Collection.Database/LibraryAlbumInfo.cs:
	* src/Core/Banshee.Services/Banshee.Collection.Database/LibraryArtistInfo.cs:
	* src/Core/Banshee.Services/Banshee.Database/BansheeModelProvider.cs:
	* src/Libraries/Hyena/Hyena.Data.Sqlite/ICacheableItem.cs:
	* src/Libraries/Hyena/Hyena.Data.Sqlite/SqliteModelCache.cs:
	* src/Libraries/Hyena/Hyena.Data.Sqlite/SqliteModelProvider.cs: Rename
	CacheId to SourceEntryId, only require T : ICacheableItem in *ModelCache
	classes, and set the SourceEntryId in SqliteModelCache.

	* src/Core/Banshee.Services/Banshee.Collection.Database/TrackListDatabaseModel.cs:
	Remove cruft.

	* src/Core/Banshee.Services/Banshee.Sources/DatabaseSource.cs: Comment out
	logging.

2008-03-10  Gabriel Burt  <gabriel.burt@gmail.com>
