@@ -22,7 +22,10 @@ RESOURCES =  \
 	Resources/AudioscrobblerMenu.xml \
 	Resources/GlobalUI.xml \
 	Resources/lastfm.glade \
-	Resources/recommended.png
+	Resources/recommended.png \
+	Resources/neighbour.png \
+	Resources/personal.png \
+	Resources/tag.png
 
 include $(top_srcdir)/build/build.mk
 
